; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/encodings/extr_encoding_utf.c_utf16_to_char_string.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/encodings/extr_encoding_utf.c_utf16_to_char_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf16_to_char_string(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  store i64* null, i64** %8, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @utf16_to_char(i64** %8, i64* %7, i32* %10)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %3
  %15 = load i64*, i64** %8, align 8
  %16 = load i64, i64* %7, align 8
  %17 = getelementptr inbounds i64, i64* %15, i64 %16
  store i64 0, i64* %17, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i64*, i64** %8, align 8
  %20 = bitcast i64* %19 to i8*
  %21 = load i64, i64* %6, align 8
  %22 = call i32 @strlcpy(i8* %18, i8* %20, i64 %21)
  br label %23

23:                                               ; preds = %14, %3
  %24 = load i64*, i64** %8, align 8
  %25 = call i32 @free(i64* %24)
  store i64* null, i64** %8, align 8
  %26 = load i32, i32* %9, align 4
  ret i32 %26
}

declare dso_local i32 @utf16_to_char(i64**, i64*, i32*) #1

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1

declare dso_local i32 @free(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
